--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^14.5.8",
+    "jest": "^24.9.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "pg": "^7.12.1",
-    "pino": "^5.13.5"
+    "pino": "^5.13.5",
+    "ts-jest": "^24.1.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
     "@types/express": "^4.17.1",
+    "@types/jest": "^24.0.19",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/pg": "^7.11.2",
     "ts-node": "^8.4.1",
